--- a/notebooks/03_MODELTESTING.ipynb
+++ b/notebooks/03_MODELTESTING.ipynb
@@ -641,12 +641,12 @@
       "source": [
         "# EXAMPLE INPUT FOR TESTING\n",
         "example = {\n",
-        "    \"Age\": 25,\n",
-        "    \"Gender\": 1,\n",
-        "    \"BMI\": 22.3,\n",
-        "    \"BloodPressure\": 80,\n",
-        "    \"Creatinine\": 1.0,\n",
-        "    \"Glucose\": 90\n",
+        "    \"Hours_Studied\": 20,\n",
+        "    \"Attendance\": 85,\n",
+        "    \"Previous_Scores\": 70,\n",
+        "    \"Motivation_Level\": Medium,\n",
+        "    \"Parental_Involvement\": High,\n",
+        "    \"Sleep_Hours\": 7\n",
         "}\n",
         "\n",
         "result = predict_value(reg_model, all_training_columns, scaler_reg, example)\n",
